add intel charts for gpu passthrough

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:audObyN3rgl8wVGoq3it/fh+KgBSQ5ontuH2HQXu1YiGEMlMMu0q2ATzgUq3nQqvnyUISrG7QkVnoL+z7GUTq2U=,iv:DG3HIhknHArK+h1eGtha76ipu8IM5YxsgF8IGDOXe1U=,tag:Lqa0Sz3RYk6HBkcvSDzeGQ==,type:comment]
-#ENC[AES256_GCM,data:GkjYPHiXK+mII6jW3yRroNqJ4OiipYz2z1vWqmFm3RHDFp69hieCZZcCIaU=,iv:r2B5Cqao1stGCfwpuq2SxSsqhkUSFarK5GizX3I3LjE=,tag:2T6FocdTt7CX+DmlJA1ZIA==,type:comment]
-VIP: ENC[AES256_GCM,data:WXXHxmdDSgH3WeMC2g==,iv:jEe0fQB8OODJhOktD5bgRAfZ7D0MkiH/obxKrIMc8zw=,tag:BrudkLpy6zZ6Z7+i5trkEQ==,type:str]
-#ENC[AES256_GCM,data:OWrVAadGeqYIU2cuwiM2Khp8qGQbRy9AaKJv,iv:pspetpnQIi+RdS4GO9fePySGjhvPS0sBqbNGJwIrXjM=,tag:i0OX/JePfP8A4O08LQgwvA==,type:comment]
-#ENC[AES256_GCM,data:lmRSifY30TGSzGp1zr4pXVX9kohHVQQLnlwtwTqTYRvrtSlVEJw8Gctx7CwMLOwydMpRqgWgMrXVhXjoUPX78C0mhZRxC17M357ZEbt27cl3uRcH0PTmHlo=,iv:JrFHttVGRV4ybfQKo09ovR/8In9HCS9w7JQ4F1cbqSQ=,tag:PzcGTISeQ8MFYgu3qZsFvA==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:09X4QStZPVa6p3xHkwc=,iv:sTu7snWDfQ/9rBhNpu1gJIp7nFiBzJP008nqVsnK2OU=,tag:PzU1GzEPUi4iat+L8dl6ow==,type:str]
-#ENC[AES256_GCM,data:9X94OOP82nkGEL4Ij5BJCl2o+eUHW0+rXmJCVc0O9To9Xw==,iv:PdGsHEtY6yDKg/xO6Otl2bBBvdJIK6L3qPLWwACXCzc=,tag:SgVIMVuH/w7S9rIhycYgBA==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:FaGejm2AkxlhObLxvg==,iv:rdbTmkiO3NseemFv0S1luTFvjojRI2TgMbamWe3NbL0=,tag:B9pwj7ljEFVzfsoMTiDfqw==,type:str]
-#ENC[AES256_GCM,data:HfCZo5uDb90TYJcw7GLaKLkhb6842GnNBBjhmF68c+PR0RTLEd/Ynarn2WgWovw=,iv:PvHAMHm/tS5dPCUrfDUqZpovuKN5KZA7hjdAAHMymOY=,tag:J+NSbIWt1i/kGQkh+brkcQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:R62mQOQG+TU13h8RhzvbBg2Q+BieFsQ4lqsYxvd/zg==,iv:ttBu97ocGpp9RiG/pFTm5IweJ5D6nJlFaoKy7pzC+oM=,tag:Z5/2jkv0vgOUCX6T3PlZsA==,type:str]
-#ENC[AES256_GCM,data:QF/wWK9Iz1konbJiMUKfgA2tpf98CfCCJGn32FFz0Ac+0zJKyZRHbhqN8oAWm5piIUTiqTTRkN+m0OrkLTVnVIl7sTPTgcj5SziyNYUttauEeQ==,iv:H1eJjbhi+HlGFVpYclCXPgcYR8BttLFf32zfopbn7E4=,tag:piow3p2/mnvWMeLSqoFCfg==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:TJcL/aVZTZltK7TVba0G,iv:XG2avQHVudDKo4z0BP+5c/r7fMNj7UnVNRix4iSSpxk=,tag:qB9N1Fr1frw+wbzJu4a/zQ==,type:str]
-#ENC[AES256_GCM,data:NPMF+Not/fBYDjn32agC0VrtF3KxXMSWH3VHOb9OzGGK,iv:dYwTIQs2uv7MEhjyuecGBn+s+TaJeyiUHYdjAW59jNM=,tag:YywtmBTU++rcH1/uBWEwQg==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:JYJOCKcv57RLXryR9LHt,iv:xUcTxSQnh2W38wrFMrfZZ2NlqvpAdQXYAXDncaJRcy4=,tag:8P11dVqIxvycZ2MH7xKmsQ==,type:str]
-#ENC[AES256_GCM,data:wypgbR2KUXQErsHlZOQiyBTgwuqDnOWCcu+UIVJji/loCccuZrue2ShU98oTMQYt+b82LZS5csrdHyTwgYAgwM7k1lu7l/XpO0CcTP/006k=,iv:3nIjpOTDxjNklyRCi836w2izhm4m34ulJrIFwaPuwis=,tag:TpIDQmhMlOuOIDtGGBJqtA==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:Ca+f3/6GUS15/V/PzPbX,iv:mqCATmJCUYjJlNL1EN7bKfj0/ecCYHlmeQi8+OWQ8QE=,tag:T2tsvd34xvpPAe+k34TlgQ==,type:str]
-#ENC[AES256_GCM,data:xC8mJlqix5dxKemvdvP9+Wa6iKr4vtd4HNbppEo3BlJFIbTDUx9D38jb8jiQW7OAb+I2yzCFaLPUjwUSjjXa88HkS3t5K8exT9iZYwC/N+7mskNk+q3i,iv:E5aR+vZ4VDZON6lxtEcKLzefXNwP7hGtdOwON/vHpmQ=,tag:07AeRsjjRR1P/uLvbv35/A==,type:comment]
-#ENC[AES256_GCM,data:wwa/I/C5C+LpZIuZXUcd0OpHTKR8nHI1Wd+26GX4nVYqumAQ0POFwM2fh04Qtwdn8s68lksjdOludlLJvZyaNtluaKRqcOxjssl4FzaxC95BZx5D+MgK2Ry5RFRlW7DC8FGkg47ntvY0pmr9eToCFFhPHV8eZxan0Rf68Q==,iv:U4OzHtCGQuek5n7vxyVHDrO2QtXVQ4qrtfXjfyPWr70=,tag:x4Oec5/USjHDrWFEuVDI5g==,type:comment]
-#ENC[AES256_GCM,data:QtA+dB9qqkb8bD8a5NmjYSnbcqrMyy5KnSTyRc6i6cMjIMQX9foRYMLIoW76sYN6zbG3S5IL5jay9MCwwVwcP5BEET3PTMFjlUs57UfDEjE=,iv:ad1aKGjD3XNbpDvzgyBEDGemOQoHOkIVaZ8M8vfIEvc=,tag:x1yRnR4+kc6lXo9CU9I5Kg==,type:comment]
-#ENC[AES256_GCM,data:85yt569BNYyXCKY2IzL9gnDginhCyv7Ye/4mFFIbAvmxOTkazj/G8vH5TQ6jB3uuat6WJD+T,iv:CO+B7Gm+pcTaj1m2WuPg/ldXmqt9kuWVVqSSJNrjx+A=,tag:BvtOycfIZ8WYv9eSu7azVA==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:r4RL5J0sxg7McSfF,iv:fPQu6+Xlfwh00vD2uotSqvXxgXRCzTURrat5q+JQclI=,tag:W+o00eiG+4l3XEcP+d1cbQ==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:crnDCHXzIyTNngbY91v0MtU=,iv:0xXa624Vo0KB236h7WfaeCHWO2ccpz7v3qdUlHcg5ug=,tag:qK50XQgW6/NRZTPwrLcyoA==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:2Equ4gEzL0eZa22j4z0kxCqWyIAQHT9SnN2ycJAzFd0=,iv:Ol22pnBoxiplNRUqElgixfqi0uBsMC5E7VXVM+S4jI4=,tag:lRj5xtrpS51p40BbYVO3NQ==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:TdTr11kP+cFWhnh11qRWnCbWvkl8/mWavOOUylfhpfYiGlBlHRY72Q==,iv:cegd1Jw8cvN00FMoUIllS3e2YgwzIrbUKMlH78ZTEjE=,tag:lsdP8aOQ05e/Hs+QJJA74Q==,type:str]
-#ENC[AES256_GCM,data:5uzgIdfgTyDVB4fcQZ8xz5hLxKjmAzDT8yidWFnNT6PNXFsLCHYOKChTaZJxrkkhCk3lEzIlPNDbiRCwNcRtzQ==,iv:eYTjta/sbbv9EznvaVt3fs2ftT0pgzuCKB7O+b5/a7c=,tag:GF80xqZjsH5Ihu8kNQIjHg==,type:comment]
-#ENC[AES256_GCM,data:nFnMfTKfNJ8a5NkFgAHPOrresjH4/9yF8bBXW8UDrxgxn2mK/vI1wsd13xX3LvlzUPWB2Avwmro=,iv:jXCZdKMw4rs/mN3vJQTRZUTvfZg6zAd7ie1HwGOGOdY=,tag:w+q2/IcxCvbd8gd3rkjOYQ==,type:comment]
-#ENC[AES256_GCM,data:mgF2rCZ9JsUgH9YR9ecNq6wzwWKrrTEg8Q==,iv:qys7h98HvKjkfBh08JqyQWsfh9tvHV6k9NRGbfJayzU=,tag:U4VzRlexfVcUsS0T9MvgFg==,type:comment]
-#ENC[AES256_GCM,data:ZdR3mfKljMXLYP0N3a8vRIwFSO9VDu+GO/goYiV1m+FzNi2nrz3hmKk7UUtYjt8Ksf8KfTmts0MzMqwXX5bdKTgyLY0BPaKx+Y32Le4=,iv:HUBX7mZP8OCfBm/+Gd3i0lqFoGXVUGyf5th34Mj/05A=,tag:W2TAZDPcOt4erJ0jkvpViA==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:CNi3aMAcQcwlN5HhRQvjHPbQlSasi7uPmXpB+bwFK20KlmIYcimlfXfMdmuyP5ph,iv:0+2C2X+JuGoFbEOTycrEroZxTpmSqlnr0pH4cqPIA9c=,tag:5nTetzKwwmuO6NPTrNmOtw==,type:str]
-#ENC[AES256_GCM,data:S8MmlOBXmcj7m4dRVtg+K2rQiNQEtvPjRsqT6sSW/+iRclPtoDWwmwdsoYbh4GsqK/ME0mjRZR0/6FrxSGntPTHb9Wps85I=,iv:TuAcVfJt8bWJQCFxNXCZhfKGkMHiCtsoDCLUhII7OHk=,tag:anEUxj/xx8aIgcVvxILKmQ==,type:comment]
-#ENC[AES256_GCM,data:8SPbUShSnUCfRTNdxNRVDA4G24ltt/kAnlco/sHP+si06WXTvace24fNNCBvQVwkewYAc6Hj,iv:CUO7CN1gp1FykdZhC+ebAha5MNT1GhbFhEyLZmj80Co=,tag:w4Fc/XQlYOVhFXUC9e5OZw==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:FYTo+UGlRw==,iv:xBg2WGbTTXlb8VqJZJr98YlDh2AEHzgSEpORX4YZDAc=,tag:wH8k+LXDCxsaxKVxsLbRmQ==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:F+zxk1FTnaJO07cQuZAq1KhtTcw=,iv:YE9hDjmsOZQpfs/xidS+VnQS0pGr/fCcxufP+xDi7L8=,tag:iY2KCBS6kYNqyiLAtLRyRg==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:yM+rJL0+EFSizFM=,iv:GIcc+QeYEpVeAxl6CdJzivFxx5f0XGg5J+B+LL93fY4=,tag:IpZEriKfScKBMALck+SiXw==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:pxdKkL4aOQVxe6kEWGCP,iv:MKobLzYkWuL8l9cx40fBWx+0Xi7N5xyVW7gG6ZvSZMs=,tag:yjSUFA/NCGrLTddhzLslfg==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:AcU+17XmDUzggaqXkn2X6Tu3Gou7PjAQtA==,iv:YhL50ftwZ9aOlY0oNjRZ8uLaV64gue8jRQNDcM4lEc4=,tag:ap6pmLhr2wOjwhv6QO97/g==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:LOTSL06jbw2YjyLCU268yKi9YQrnZceWJ4HLY7vgKQ==,iv:PI04UuJAcI7Nysy/Xqq7GbCTLPh0H//KdMcvCJwAees=,tag:QNe7ml1FOCOVSka4Z2EQ0g==,type:str]
-#ENC[AES256_GCM,data:qPnyKnFPOHKJNR6Sy6R4atfY0ebY/PYiEcKi7Tc2ZrXbdPHGE10=,iv:cAmmh5SI5v6RhsMa0OcOrL9QwaEH2xHFBO2OvGuymAk=,tag:PywVE87ZYWQQfLvgvc0+Pw==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:/XEFk4SWkE8Ij/ySxaT+HADgD8A=,iv:Mip1Cxgf4d81u5I/eOTfWZEvzKlkpu/FEBgj22aO4xE=,tag:n66Mcfsf5447p69q1pC6ng==,type:str]
-#ENC[AES256_GCM,data:sAVPawfl1RTY1mzxwak=,iv:/oTnlKhReRN92Uoj7EtcGlXPyl4VZrBfgDbxnN0nD7k=,tag:ikVOkuROBI7eQVTUzGf4mQ==,type:comment]
-PODNET: ENC[AES256_GCM,data:7hsB+giXfm1ejlDLcQ==,iv:7vk54wvpjN6hoR2gRyos/mWS4gbl6O0e3rmOiYNOnhc=,tag:nYZq4ynGlgfm22ffiCFZ4g==,type:str]
-SVCNET: ENC[AES256_GCM,data:v6EF3xF83lO0/SfzsQ==,iv:0bJfS2FHZi5U+V5jO4DGBZxxjzeAYB1yzMH9NApU79o=,tag:f1hgbUG9peSEf3eATlZ0Ig==,type:str]
+#ENC[AES256_GCM,data:K4SIhDJRUXGBOOFLgpPMrF4mEWmekcUgs1tZgvAg8mfGEmFHKYQ495C4CXnQ6kes5T0pqsZhko2DwHLtK4IdUnU=,iv:sJ8284P6jhuIUmlodutQOlPK7RAqOhMXq3nUiaFHs7c=,tag:43RD3ylYiwKrtfrD0SnBgQ==,type:comment]
+#ENC[AES256_GCM,data:QAjbhj7vWXfS1Svs3gEv3YGHdmOMy5uiWK5yLcxf7gBKnqaEnlvWYIqBQ38=,iv:Mm+24lWWll1RY3UybHmZo4QsJ/xSYvWJSQfFCLz3dHo=,tag:ZIKgL5w0yvPNnCdugL6D2A==,type:comment]
+VIP: ENC[AES256_GCM,data:gNbLeCwpyLgVds802Q==,iv:HQoyfmCVmdWAJ2GUUmGsPK+uFuatopHXnMrxAWdmV0Y=,tag:6QMTJKozBEiCr3uHzo2LVA==,type:str]
+#ENC[AES256_GCM,data:tovroQPXghF7Aje3Ogv2nAMQu5Kwz7D0NUcK,iv:SgzFWtGBXiAv1Gl1zF/V1kvL1OG+xyIRab/WYlxKdew=,tag:GxJ3baKj7RtwkPi//qD47A==,type:comment]
+#ENC[AES256_GCM,data:t6KV9wCcz1YT40EQOz4596bkNFOpRdFrbsByQHcaR0nXxClCYgbEome/+RYVpI7xfjrq8DR+fUuixsSnwSvEAWcbtM37JGV/VJFnUVAfgNOrj4o84WUaG0Q=,iv:1duaoghZBeV9lFFb77uqPdj6gLM94OmsM5TNdoSKALM=,tag:+xkJndEggRwF/qYfB2A5fw==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:tDOyrF6G1MZEn2+3/Jk=,iv:bRY2Q2Z9OnyY8TQHn0lrTuzGrx7i3ZP5zusgPH0AYb4=,tag:l8o8Uz94bFa3bVlgYF5Ibg==,type:str]
+#ENC[AES256_GCM,data:7aDi02V3vGZDRrbO+D29I5lXLuonggUqMKPzL4lAhV4M8g==,iv:1MZ52DAXbp9qnyPpTlKuXyxxSbX2MbgbUmTXbtW4Css=,tag:BTXV0/ekg8wA8ZKxJOE1SA==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:QPMsWCt8yW3KJy9H5w==,iv:f2gNZSiwKUOmbNQnY1TKBD660EKLIEUfpt58MZ/f57M=,tag:+zNPjdr0SgbeiWJmjpp9bQ==,type:str]
+#ENC[AES256_GCM,data:qJc6dyAnOjoTUa9vFDK1AOsSWkZ37YEIsjJ5DfYbCAEKAzrDpJQuo4rkzwUegKc=,iv:UPWoOqiuNg9WGcr8R8K/TcELfC8NhTM5NhBazfPnjR8=,tag:ku2b1Ety3DpzkXxL2vEaJw==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:hgh54k9sGFr2rVH5xEEjO+A3ktonCocuXsUjs0V4sQ==,iv:3xAqqD2vH2KCP/b2nUfC/CbcTWtBYnBi5oub6aDxHSk=,tag:xV+8yetQk1EC478CkEDKSA==,type:str]
+#ENC[AES256_GCM,data:MylZiB+qngft0e9JD/KTun/LdO+cx6n+lv7NSMH5HMsGdcJNPeROLnaLbTKn5hTFR02kUHwCtvUps1RqJBKKCHkiqyVyZSNaA5Zs3jfWDdbOZA==,iv:/i6t3bJv/lknoj1wgZLpgDHz6KCtru21gr1dsZwnBxc=,tag:VM/eUGmfp/La+SRnQo6HPA==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:H1XOfIb4orL0+LKqjHFI,iv:hZr06/qgMt0QkR/zLc/+MpnQMkrH23ovboib/A9STUQ=,tag:eKkZPHBmUgdw8uFCSxmgBA==,type:str]
+#ENC[AES256_GCM,data:gI6ZYGKuvRt/SSPuZU5wIRrZogkL5J/lmuETXKzZpSq9,iv:cyuukjdC66/p5yBnW1YlOcNvVJKCzbiXjtJcqnSRDII=,tag:HqENo3S7UxWZ91TPO3x/qg==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:zeuE+vURauELuvyw6hBv,iv:kY3OQx85gfm0oIxGQhVFQrB9gmV15rHnH2PXFuBBRp4=,tag:iocxOhRcivSPL4zVmJUTPQ==,type:str]
+#ENC[AES256_GCM,data:H10edWP1dexYZhklmFK9dSXPesr0y+Y/QnBAJXtbPEVemHuUWn+iM9nQJ4dxoBWT1MoJ5zWUL/4nG9RhTWQ9y1TnPa/OAj5DJppGq8/+DYk=,iv:wj9FReNxWYzeMlXjZfLafvkfXppe8TchHMEwG1sunTc=,tag:NEA8N0wEaQcwR2hZelx02w==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:ty5TkpKtQA5rnydh1mix,iv:JGfazg/2ZGa9oxu5bCj9/Dgk63jrt/B+OEEVYa/Dko0=,tag:24VrgTPegFbkp6XcxsBEiA==,type:str]
+#ENC[AES256_GCM,data:LXk2dXJUHjBl6YGz+xzIojDK46r+CN3naBUYz1C5skKLiqO8sB9vHFc45KvH12bEhqYIV5ScslNWzgV3i9OuO7ShBr5f8m8buYLkgmWwt6wgcExRTex/,iv:TTvIaCdQ/OpGVcRwifsjgCp++oDe34grKuIanTv6Qqc=,tag:mu281Ulp/kK1LeE+7R9ZMw==,type:comment]
+#ENC[AES256_GCM,data:tBpxmIsbIR/ejCxirLuklx5XrgDpEyNMEkt9WoXD+WI6ZjFTZWMFvYsG88wrvEEdjptAnNTS/zw1L431X4hydQYBMfJVfuAOzlwVa5EiqUFAM8n01Pgowv0dK3/1p09/OGMH1mwj+b3TOCdcLkzctjJcms3Rp0A8TBFe+w==,iv:ZN/MLRKCboyCaNO+HXd5zL2J4VZCxOqNmMrLX23aZ5Q=,tag:5gjQFPb5zdzVNAX7aUlLyA==,type:comment]
+#ENC[AES256_GCM,data:Y5Y+EO4iHwvB6Dst/VzNR9pbOeumF6C9bsMTxPChLmRniqwgpcBMdOAHmPmJ5Wc3eo+WLaRzGE9/60CrV9fWCcYKM46/aMLdtPzkWYPW0O4=,iv:nyb416MxSlEk6/3a2sb6ugQ/qrC/jucgFVTy09sdIr0=,tag:AS3zUzcHhYY6wZDFubdKPw==,type:comment]
+#ENC[AES256_GCM,data:ayYddR4Rj0ziv9oUflV3IwA+aziZrnwzKor/KkijUNyBaPyBceR7C9wETh3xsp0VhTgZSrYP,iv:isGztV1orULUyCo6+kX/vMWAiCyGTj9bXs2JxpXq4Zw=,tag:WnEt9uE+n4XHq0gGKEYzmw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:VnJGxWUUbc0bhfZ/,iv:a+VGdEBakxW3yFlOsIV2vpl3y1kx90Az0fHaX323HUk=,tag:X3caXKeZXYwgwBUvx4j/pw==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:Etp0FNA6G2nlAiLRrcICqtw=,iv:kPKlVHpjujIZBNOYbPFxpWTaHTAlgZ+pOTNtLhYzTrE=,tag:S3R6ErxodOEhACQotJ92VQ==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:+Jh8j8tosaxsgBdvJcKSbGbPtCOfji3zbYu0UZ2FW0E=,iv:WOst1RTg+UDd3QY9TMPVBOpdN1+5WYkRFThTpgGYlQA=,tag:yjYtPT51l8U9xuUcXNAsWQ==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:dE2xLQEn7k1dae5VT7Rs+ieAQLMxttFfvsWQhCqyTENHhAKWOaKDiA==,iv:xhlUw/cDK99yZTN5LvyzF4+hF79NKmrn1hD6A79OXK8=,tag:ztNjsNogbPDIZjR5EAGcIg==,type:str]
+#ENC[AES256_GCM,data:fglN7pK6taZuJ6PpA3ukZjU43OPyohno5AqSINeJl82B31t8EvTIJIsOs3ao+acpbk5QaRyQlth6ZaZwUy6C8A==,iv:L3kfoCA7t3d5P/6wjy+A30OQc7dlYsVvnL0PVpkq/H0=,tag:iTUX3w4Zqm45EdiCjknaUg==,type:comment]
+#ENC[AES256_GCM,data:QzakdiKWKDwSx9DTJvO8aLPG/NPCbzkPJr7SLBtezsy0Ww+TwrAHW3RePP4+uq3/Br8K+BlWpDc=,iv:pePHYhFwbEjtcesQJOSQC16+zwTb3vSsVCZGYCcrEhw=,tag:18lzpQEixE8O+ZvNhL8zww==,type:comment]
+#ENC[AES256_GCM,data:ROfwJglBwBOhgtql/sK2YZlTi+A3tpUdJg==,iv:OD3LikX4XGdKN2WG3FUnH8DSnRhrjVH/epPEuEHxJ/g=,tag:nPE5gW98wpoyvICtowXLkQ==,type:comment]
+#ENC[AES256_GCM,data:csDoYsiFtX4MyzewwG10rpfAGBKwnUGDT6YCcKeT1cyNfMmLSc4VcG7boQ5mcMlONqsy28j3HQM7WlW+i9eSMN7h2+YsX7eQmVKUuO0=,iv:+7KqfeOyULzeRctpEfG5acFCuAhFSfJrnXnMjhtHFWQ=,tag:phCAML/QrAhgE7FGsGX4pA==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:fs7Tw+m01ymzLNYYmUwEacXGfe3Xzx/XjBxWY74vzNbEnkjZXHCuML/KFbQGRfcI,iv:HS4mgXwDzCSXWhmNeI+5F3g5H4ddGIYYLVtwFdCuM9Q=,tag:0jhR5+tUC91eBdIUTf7d0Q==,type:str]
+#ENC[AES256_GCM,data:P8lwpS8rl3YWv+LbmyllWrHSwbrsIHyxJb0NXscs0x2kYi1KfRVFYo4xO0lKipyMQQvvLvl12hAdxXzica1klinLbj+Ik0E=,iv:VDMAYe4nVWFGHe5rk7/avCWG93gHXw8HFTBUHys8LBo=,tag:nS7qWUu5ugDFFpZOFEZNkA==,type:comment]
+#ENC[AES256_GCM,data:4gt03u56vJZPKFZBXA3bnGEu7og6Pvaaa0x4QPjNUrsRZzi0O96pPkZXAPOvbA7SmKLOZs25,iv:c2pIAO/wy1MmIEQ6fM8rRgBHiVFzR6vZk3lggG6To6U=,tag:Yu0u6EK8mSd9fSOn7VX1YQ==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:yq6rk8LkVA==,iv:SF+DAsnHB9OfhBBUkuEn682CNRtIJcqeX77uPg8hmpY=,tag:k3rL8fJJgXuJm4UFKbWojA==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:mXHzGbgG1kFqc9pXbpwg8sh+W/M=,iv:gq8f9zeWWer5hhFlMF+KgCQqkNnhjtCR6NYK7zkyems=,tag:OwqFORwG246G8R/WLNdt/g==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:97OlA4V5M6s+q/o=,iv:q4r30Do5eLZr0V4OcuGSyae90SG6WaWOT398TNnl70Q=,tag:/xTpswZQjOpW/StqVrJqbQ==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:eHfxMksQ7evco14DW4Eh,iv:2xYzzZ33Zod40LViCYPrlMykQDcsuGXMe88mHyAzblo=,tag:mMTxTZkJMNyyXx8XcIkdqA==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:lessw6Usyqcj9KvkWUMNpBYZm6hPebv+Ig==,iv:N0G2P+0WHOQ3sYUB8wncUxy+tQeJNS+joksSrJlFAjU=,tag:tRTsZnzT9aNpfh8U9Rwy9g==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:BB1JiGUarYF5y+jtVRxKKQhK5L5oJkdbgBDwU9T6nQ==,iv:7yOlUldIz68pFYyWuKxtCnZMzupxhu4PhXxTkAGSNuY=,tag:K0d7jCNKg9XCZU4ivhsXCg==,type:str]
+#ENC[AES256_GCM,data:kZnJXJiFdTiKloE5lsYgWMQkrg0z3sF+0wL+Zkq51VmYA5kbQ8s=,iv:y1mlRizNEgOx/hGxbb5llCAtAT3Sl3SPcy3gu9gNbJc=,tag:e1ULb/KfDHNTnKk0/+Wkmg==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:DjJjgK7RzoAY5+ImOOO625YCIvE=,iv:LLD5iTJf0CM4pNmqsS1cLxniJafM2U3TmhJ+DCyEBSk=,tag:7BcEfnBFmw07NK3q1l3UlA==,type:str]
+#ENC[AES256_GCM,data:R/iqG5sAwSB/fuxtwGY=,iv:M9qEuoLHdhZhxf0BmDKiscs3EXT5S/dtj5+006seFRM=,tag:Qjh/7FUYNIIG7MpMRCSWVQ==,type:comment]
+PODNET: ENC[AES256_GCM,data:SIJX9CQZ3uIBBtDKDg==,iv:e58KKSyu37zsCn0icC3vUTRigrAgTgEMfOQgjoaJqXo=,tag:wyqcy2jOH3EUruOkMvf0hQ==,type:str]
+SVCNET: ENC[AES256_GCM,data:qOshny+2vzhldipgMQ==,iv:IX0iQTVVL1ThCYmJZ9yfsMziKYXbE9UklGL6AKOLXHE=,tag:RrZJ8X9Zsa+qNfotqTHaig==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmdDJ0VkJFcVRLUExacGVs
-            Y1J1Z1l5T3ZmcWVLbUM3MWxMUFl5OHVRZW5jClVvMEQrNVg3N0w4bUY5THR5Rk9S
-            ZFZORHBSVEpTdFJ6WEQyNlR3a1FqbDAKLS0tIEhEaDNzcjhCWXg3YXR0WGlZVHZZ
-            eEwxTS9VbWRZdDdOMFgzWFphbWgzdzQKO3rWdBHQouvoTjPF4HpgCbdbYxiFPj91
-            yyd+O71cPIJRhD/V7IECIg1Jc8PB2Lpon6t97G/J8+w9nda02u1r+g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMQjdCdHcxN1hMUkE5Y3Jx
+            aUJ3SDhOelV2T0tLTUdBL2xPUkRQaU9xczFFCnNNL3ROYW9lVWJ3czM0K3VsVHhp
+            ZHJGY2J1cXdqNmpwRUxQWXhnYTFjV2sKLS0tIC9LTzMvck11M0pieDZ0QndqVlcw
+            RDN2cEYzREI2L2xUUnpkRWFnK1hPSTgKcGNFQ8vppVvwzdbQ9HYBjjb+ijlNoWSE
+            UnpteGfRGGxGiXPcnWC4Ks5v6olUL43BrP9uiIH0IgT0NLS8UKfP7Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-18T22:16:44Z"
-    mac: ENC[AES256_GCM,data:5y9uavZqHpcmrtyLif9lVvBxQ5JI/gxJ1eIF1bG9u9gmXbU58CAnwP7utJpH6NI13nGnAweS5CggRUtPOAA7M2Um3dzIrCGYvx/xACjJ+4/axz5a+pOC/MuD/W2WIa6Cz2zzRrlETL6V88CTSXDUB0oQ/92NjHFldZHwJpeSvXc=,iv:vEtjqqDAxPJMpWC+01TjVRpYtfnVhytyDagOmnkMJZY=,tag:4HPYu2tezbZMOYkUfIELbg==,type:str]
+    lastmodified: "2025-01-18T22:46:41Z"
+    mac: ENC[AES256_GCM,data:OR85+OqNXPTm2CzqC5wM/+dmSUfetzPtw5AF3SM2t6V4sBVX6GzCP6CpDiiBvE5FPlY97t4ET9oWxnPtKfMyVkmHfAl3RKu0PML3nqWO3MKYtWoTnzAMNsbvv9KH+SY2/AQ6a1uR5++W/TfdD7F0SDVSds4Y7zkw+PLCAB745sQ=,iv:pn1FumOMyNAfbLJigdJeZv6eT0NKgHTs9RQrH/6S4sI=,tag:9JNVpE4DO2IZSquH+N96bw==,type:str]
     pgp: []
     version: 3.9.2
