--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:srl1SAQ5PPlgSetUZYHQhyxvu4mdWsnPrxGpBdRCDi6y+e6K71G2Ibfv/UQhQwF6vOUkzNIt3ZgGuk8PSqJTU/Y=,iv:BhQvudTvxDhOGzBnkPCyigviAtp26PQgRiMqw+NJK2Y=,tag:Oe0HmiSVR19I+2rY7C90cg==,type:comment]
-    #ENC[AES256_GCM,data:GuTQF1Pn57pK50jWZZJoGmSd1kLQCP/VsJeEv2dyt5LTXSVfF9ZZrXEpuG0=,iv:WtcxLnCG8oNIu+YHYX8QcPZMpD6ZzV8fN+/RevaRYng=,tag:KXwDOT5T3nTM/JOkkxD1zA==,type:comment]
-    VIP: ENC[AES256_GCM,data:8lQ4TaoO8msBBJX7Dw==,iv:vfkkMAKbGED+tAXb+9L/o5aqdy3TfYiD7uktKPZ4/r4=,tag:BwOklwA8JdjYsLvnXV0a/A==,type:str]
-    #ENC[AES256_GCM,data:PIZlS2j5XWXOLVaTiHbx3AfWSp7s2jpdGW3f,iv:al04ME7uLEfvypK4o8nOmjuDzZFZduGHoxtvWFP6iZI=,tag:GITBWL0wZeqNxLQjcLPXuw==,type:comment]
-    #ENC[AES256_GCM,data:WdNTQrZ3CtViyHhlpt7yyCcPmupVxJcGL0Pz2W713OlU5Ddp+8TI0RM5MTXZxSo9LHZUgF9G8Dncoky2MMLA6tZsv0Pdyb+UBMAjpJNGed6sy8mgNXkpD8s=,iv:8Inw/B/o08ex+RKZh3lIaK+KCohRZm+kmxfuH6OIGaQ=,tag:WKcxZQXAYLbw8TiHBD69SA==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:4COofT9LGr+rWpQ8NuQ=,iv:tqxu9dhqRbE1jUKN7w+R66nmyh+pAwM0p4ZZjVJstsw=,tag:XNM2Syi67Sr/CfTPBtgo0w==,type:str]
-    #ENC[AES256_GCM,data:FHyPiOV4nyuR7+CBXGT8XeYgxyor/0aEry6tuLzuxMpHNA==,iv:X/Nkft8D1Ih+5Mi40ZVamXuuFt4HgM+h1sGWkwB5Jxk=,tag:i/rrbtnXkMB7TRQzptf7xw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:P9agiHp1GcRiJfndPg==,iv:hRUjKqPRzdbEQq/FY7dg+cqeRtgWGD4f3Qnm6a99cOk=,tag:TOAm1vxwDdPWtNT0snz0xw==,type:str]
-    #ENC[AES256_GCM,data:pz6BVdeE02cK1cEDpsldX/yhbbVC396oEkm17Dw7b/NewNSWhwZmRa81t15wtQE=,iv:66YYpgXs6JykBMGcuRRAhx7g1Kk+AUCYh4WQpbFwNjI=,tag:aBvPc+yDJFKz8J6g6KDJbQ==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:5D4JAU4vfp/uMCOq5CdwH/HomskJvs3Omm3UY2IyMQ==,iv:xA67YADcE+Nbu/XWJLNLH6Z3RFuw7LDx/fLZReva6Vc=,tag:Krw3K7quQpuR1tMJQbetuQ==,type:str]
-    #ENC[AES256_GCM,data:A6051o90gFGR4EWIlnlJ+n+jAd54Pa+Qjyen/b2iMjHgWC5A9FTLPDQ0/LMOO1jHt7dFCs/DEiUs9PTtgpEI+ZhtvRE3OdRIC80ZCMouVrJmIQ==,iv:lqieqQxf+ONgbtlR2K9uHYmyaGcaBMway7k5by6wUq4=,tag:/KkNxkEV70pYDLEQECAB6w==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:lh7V/Yqi4VbAUPVCZ6Su,iv:7IjX+k51ofEUu5IgzUSffbreh3vt1RJzJPiGe8lJB38=,tag:8yy0iR27+lYY+CUkGOVFSw==,type:str]
-    #ENC[AES256_GCM,data:1r2rEKKiusOXVHD2ZTI9IWr28QXy+PSDIhGqypBwTgdR,iv:qEAyyfNLc0+3dBoUv+GYbuQoptsGzoQt9zywRqHwbDM=,tag:1JqqaBhXt5fpZhfO+3lQfw==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:loreRyzYw7KHabjjRhze,iv:P6CiXzkag9bjyiR+0gQL6rXidxQ48jOWoAkJX/bK/Gg=,tag:/ey+SmNForSalD6FdmgoVA==,type:str]
-    #ENC[AES256_GCM,data:ZgAJcuRsHzGg3fJP42J2AAQPGp0P/qYeMBXb/U0c3AQZpFa3WBzaX8fziCuLCva7OhQ+6cwrdbOzqYJs53Nl0J1zshMCTMNMDH+URNbfjFs=,iv:qOQmMl29zSPXT1QxV5TJEtcmm3YdV09a8vBlAyLsTNU=,tag:P+BDGSpHBtpWLImSYZNu+A==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:edxsVpml/eA9etuNoME5,iv:McsBsq41gPFuvSxcjzFt6HINHcfqQc+jWrbQBkJ316s=,tag:2CQZoF6AZcYcSFIYWf32vw==,type:str]
-    #ENC[AES256_GCM,data:ttQBvq5KOzzPMw9i7T+xaewAdP/IL0wP2cyx3HykCxhxvwnoGvY8Px8F2gPEAMSvF1C2GN9JupkQ8jOyJf6BT1yIpxXO+KRD1CYLOVHOWbFl2lJWIVOc,iv:nHjBZVyxFo1ltgMgIg2Gfdeut3b41mi1VR8z6f/2PXU=,tag:9W+uKzfQ42xfPZonjJigJg==,type:comment]
-    #ENC[AES256_GCM,data:dt2nJigIH/PMsb0fCY+zUO+CaduwLivWRmURtjXLFSJUNG8sf9FVJsHfN/WI/ZOPVcpZxgFtTfQzsrjyASkUYbQCcdTQJkPJ3EXxLS972wiKB7HIUoIaab2wPV6jiwHpXuH/558jJkoYq2nBHVhQMuTo+CrT7rMFedks3g==,iv:E7FFjSdKUO/0XeZ1SNIfpiSX0tSUCYQo9I6wnnSa8ek=,tag:dMMu5dSwKBdMBTyE8HyH/A==,type:comment]
-    #ENC[AES256_GCM,data:Z6A0HHI3ujCKKTZwmcfIfk6UfgOQmBwxVoDUgbP5Sb4MCta3CTmlD1q4nma1YkBj7xm6ng2TyQM46/qFcnnHrW7gonvdHP1ZgZIxw6H48UY=,iv:TxwxtnVzE38RTiAZEAUNNby9G0dFzl+hFZb5JMGehw4=,tag:7xKFuw6ak0/wRBMkfEpr9Q==,type:comment]
-    #ENC[AES256_GCM,data:F5Ezgm739IQ7BUQS74TVhyCgGTJg8B8rYOVRxwR6/SxePEN4TBLuNH4RQFtCI/Gg+IlCJ7yH,iv:LEJzSR2JxBlYCNFhQ9O+3RHhesNdS0bJwKz6OU6oGMs=,tag:3woy8fuAxXDu0sv0EBFxyw==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:CFcKKwqAapWzlMYQ,iv:lF51oY6+xqptinzoMETsL7mqTyG1vIGWU4AaXCuOmHE=,tag:qXd7Gz5fRW2U2mEA/zui4Q==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:9oKw4iQ+hURRaO4oaxxWlcI=,iv:SIPBPExRYv9gsAlCaluyeYvo9cevuLE00FdsHf04Vfo=,tag:UurH6TpOP7soylmYukVrlw==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:BdM5NzjyRwWjG0fWmaIQWYkzP/oXi2vMpItgS6M1lfE=,iv:Ce+LsQiB1GtC8FXeD9TTkL7xNepbZACVmPz3rj7igNI=,tag:rAuWU6otGem+S2FeVExz3Q==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:8oy8Qea0j7H3wuGncOG+inAK0fVHN+xZOvlumGwVQ6wFoHrdAXu8ZA==,iv:9rLTime9RVBATI0zu6xmrp4OG1hjLo46ylDFRhYzAy8=,tag:yrPBaiG7UxfWQERL7mEK8g==,type:str]
-    #ENC[AES256_GCM,data:85kuxPsi6JZOR34EQsht2kLEOD5eOpQ6KBe1oL0pLZCdFg5iMaKx8BpT5NfsE0N1XIsjYmPGZxaWsu+SW5P/NA==,iv:GdVcdlKd5Evo4/bj3LiDL0fFK1xQ4a7tjTeBVx85iZQ=,tag:7G8wZJG4qU0X1DIQAamywQ==,type:comment]
-    #ENC[AES256_GCM,data:ZoCAkulnuuWIdpq8ffz1a9r145phs/y2979ms6Rc8eZRbwafRadPWq1otK+PyAzHi9Eh9Q/PNyY=,iv:lkx9TKCNf+pw7Q3Jf0m9wJvQZT5V5xBJEDu4+R/ZT+0=,tag:7yKodJbvPEW48eAFXYah+Q==,type:comment]
-    #ENC[AES256_GCM,data:rPl79B2feyjBkS48tLxNBDc/t1S1GCSHbg==,iv:9CC+3Ofl3ZUcBZifg9Yhy/k9lFg8k+zCYgpD9W3AHfA=,tag:Kh7jQ+AYFICbJnhDb/WphA==,type:comment]
-    #ENC[AES256_GCM,data:WM1dVxQRy9GiZ7U1whpIf6GPeLZtjMDE74mWekxnGDv8zYW9YElkAMRM6FN/+ltQp903+GtGJBPm1l1cLqmuEkX83F1YOfbYTkryVV4=,iv:ShHEIUba4ty2lR1CIrVPnO1KeosmXkBMAGNn7uBExVM=,tag:9VZRwZOK4KwLtdbYxPT8ow==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:IGE45y5Gwm95X9y3oynop6dMGQf88K+TOPB7zJYmphoRT+gd48KNMXFoq6eP2zwQ,iv:M/qbOErfQbOQKxdNsFdwJpFqpSEn6LWWhIeBy+o1gQI=,tag:FfRaXRD+LblPOFY0iMLqyQ==,type:str]
-    #ENC[AES256_GCM,data:eWugxzK7Aqcw9amU1fIf9MtBB/HI5GJtxKw/uJT5Kb6nJi3HUd52hl1wvmSlDPXYrrU1Y3/O0HMG26Y2HhaEt9WrnXW+3Xs=,iv:gzDRkHCJ0BddKnuzp9+9ohsVyPl+zu8e7fE10aGxoS8=,tag:Rk9J+4kch30Xez7fHFEx4A==,type:comment]
-    #ENC[AES256_GCM,data:6ZIBKoGbpGAc0LqJg83DvJBbYTzeIbGJrDIjdYcYHHFRC+XJ/pw00yTww2R9KydVRvOmu5f7,iv:w1PVr95XrBhGuuiw0ydW5ocPmIaUHsKSkeee0Tz5fa8=,tag:0brXNpCoxHEoGs/JI7TImQ==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:xXJk0BwbFQ==,iv:vEr7KsokXmmZ1jjJ6qCSP5flKx/kW0zyAHqoB8RLLZ8=,tag:yfG9UMmSfbK5FnIC3IZ8QQ==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:TTKuWIGoWl//k0gHmpLOHTOiDGc=,iv:52TMYgJRZmJYKdvWBQuJNdseIHCg4CXWLK/B+Sa3tUE=,tag:XxQ2sqc+ayW0yW49uwJBAg==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:NFOQEDEWHyco0ew=,iv:LHBWSKGH9/dQPv27DAlrzZIPm75sF0PpWxdAadMOpgc=,tag:DyGGouMHztlIBwPNWfZm9w==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:3OxU2XQAzm0B/qrqGC4s,iv:k2wKgs/v0G7pW29xgZh/Q0wqXBp7w6ddyA4BCEeRMbM=,tag:h0wdLdix5jRzNY4YAGlaCg==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:MbFzPgHVuf/ca2eVA1bPYxAJxtHDrIn8JA==,iv:C5TBJ5a2ZEazqoocv2WaHnwKZPvTAcfc6DZui5usKRc=,tag:3Whr+gHFdMGoIGo0sB3Xhw==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:7pqjosbH+BoYpwXVJNTwk1HWw83ZOjr0122VQIQXeg==,iv:QmQHksfbLhIT+44bUsoXjckjWl44zmfb99VTGTwjU6A=,tag:MQtAXctoD1rUGOVsFNjMRw==,type:str]
-    #ENC[AES256_GCM,data:x9Z9/q3cmD0oYQ5eK2kZvohSG2d5FIzO3SeI1qEffNyIcN1qOjY=,iv:/S7V9ztLnLlPg3Ysdj7w/vvd6Jv5DJ8goaAnlTEMvPg=,tag:EmStLafyJY16suos5Pb3SQ==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:afXae9xwxendcdzbFu8Gh7U/3lA=,iv:rq+y9dzCMZcjn1r54d9shoLl8ylXqner1Jm6nhfEzCg=,tag:7T/Ehptl9e9yclzRudSspA==,type:str]
-    #ENC[AES256_GCM,data:w6kmhYNmEks3DkiW/HQ=,iv:fcApMpO+A8AfSPWEVufd5T9NTPkEKQwgyQ7r7krbOFc=,tag:LlPk+dqyTvrrehg+35MckQ==,type:comment]
-    PODNET: ENC[AES256_GCM,data:QswM1+1RD8VLdKuEMA==,iv:V+T3+zRVgEpOKXCYn6GvoBvG4DKfIO9MMeh974LfraA=,tag:5d1U2sXSv7u1yv3WfuwXBg==,type:str]
-    SVCNET: ENC[AES256_GCM,data:ILsi5zt5ZIbREEIfpg==,iv:O0AlDlti+OmRMpoU1TdNzWYSPNnl63+e8xTJCzpIwiw=,tag:RoWamH1ETqjs52Q63IZ19Q==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:ZJff2w==,iv:VksGJi7OQkQybdbnfFrY+2f0Qti2jrRyRTjX1uRYLDI=,tag:jsPbnjfOVpPE6E8yuMKzTA==,type:str]
+    #ENC[AES256_GCM,data:EB2lGVL0ej1tIFgi7KCR1kHCB9vjfH9cyh9e8z8QSPkpTUaaVo7Re6H26o58YrYmlpTn81CBEUVvbkFk9XZF++U=,iv:lU1zIFV0lHM4e31e1e54pHvx/vKt+9n9qI2uzeAN8DQ=,tag:SYxseJUxCck1SnrtuW640w==,type:comment]
+    #ENC[AES256_GCM,data:Rpf3iT3daAAUnwrIA/aAXs3kJrO1RI2Ytztb2WYZFKG3VBNSOqS0q1XpvhI=,iv:xgkleyOWhqhWfO/37dLsgaB1jVTUuEjnkDZAhfiYGxc=,tag:XSLyMovQmhD7/PSzqk6vQg==,type:comment]
+    VIP: ENC[AES256_GCM,data:fA3ULhC9zX3VFjrHMQ==,iv:VuUzimvePjct+LOSuN1Gk986CAuPLOzD5nBzPDltaKU=,tag:jhxaRuCcKEtY4q+TPActOA==,type:str]
+    #ENC[AES256_GCM,data:xu3tmSUiFjK6FvTlTHHFd049qGW/+GqWZWQR,iv:izaGwRwlLFn2vTnkbvGAGQsHeKpGP2ng1j0f72CviH8=,tag:sbRnNn45mg4gzJYsGPaPMQ==,type:comment]
+    #ENC[AES256_GCM,data:DwF1yG11H+18pYoSJ47q1dYGvL9F+/R4YrYfAMsgj1VTofZoTSmzpJgJ6iPLUur8vB30UXWaMrenI4zQXEx4GCXsQTbn6qs8BfXMcUP8cPkozG7ShE7znXU=,iv:EWbiNEzUh7hPYdC/hhq4rKLxQBMMPLu3LlyWnY1AR8E=,tag:9fDTs5JqXUXQMEtzCy9mTg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:MpPObIbsMFbRYM5nB/c=,iv:rzOdD8ZX1VKlDluJAkUDys4AHzLz7n+inev1ibMulVE=,tag:Lhz3UVNqrOPDZ6yfpk/qyg==,type:str]
+    #ENC[AES256_GCM,data:bUsVk7jArkNlyguGO8+tA1YMbaMH9ICZbPHsBXGW1L/PzQ==,iv:DUOEdTIdgrIViYz44Bp1YbvAx5n8c9gow0bJuFLKxBQ=,tag:E1YsTRdHGrDFO2ufQhh7HA==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:7lwPKZ0nJalXTRL5Kg==,iv:GBxwJGyCId2xYEkhcayHDjrJqHFneQT/9gOs+qBSSdw=,tag:afX6FyoFGErdIbOElcmyHg==,type:str]
+    #ENC[AES256_GCM,data:lIzheKDGmJHku3AM64iTAvsFcJR/DqHB4SGAz6mKpV2VaBRKNOlBkSE3u0P4MQY=,iv:b6LljgS1RUPxj+S0y1RqwffnJoRDURl/6K4CIzVj1nw=,tag:0Ij8ggyJkd9R5PcgN3rw9g==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:ckdCDg8p4eOxwTqcKxKJcA7HwEbwxI82eM+kN3Lt7Q==,iv:VN5YQdo+W4x36MUFDfgZxl11eN2R2q2keynhFIgnE0I=,tag:zSUy8CRn8d2+SH85X0p3LQ==,type:str]
+    #ENC[AES256_GCM,data:FD0+zr/RGH4jJLlTlC4M2ChRExkAw8F7jzI/71t+C+aKasifQLafw0u5Vws75liubZTpwqD+Nk7Sr6CFWl3xTnotHyFZflIIVPGl2QImQZsB+A==,iv:h9BPsfPTrwIC6PXEOHfqfvSZ4y1Ai7Pzq9OuC82aRjc=,tag:N8TVE1EMuzHB6Jz5sR0p0g==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:g+83uGEaEt2GJMMHtyse,iv:2V+cPnmYwOVW1AtlgzIKJtKRtGKxvOCN0Vj/wL3lxQ4=,tag:irx6YtQEA6hT0N3dcxqMjg==,type:str]
+    #ENC[AES256_GCM,data:8vmDa07i2UCPriY2jV4MmCJwUYCwY2UdjRCCDnlqr0JF,iv:fD+nI0Me7hb2r3TJnL1iIw/lj+OdfXRbfWwChS9abbc=,tag:P1jdQ0S0YpJWHEOyZYLRng==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:02JoDTFTfNKl9uPoJ/e/,iv:GTsbFbEfhrZgTK5U7E1wsht7fh0zzMUbxol6WCAtzWU=,tag:F6ljSrkBXG2QlZgSOvDaVA==,type:str]
+    #ENC[AES256_GCM,data:ItQlEmHCFZnH4ne0ErgRYPCcmjih2jEA0VkorIRUOGeEJQMmtUmDyQAn0BVMsiQMS4Wizb0mS6isDCVFpIG1VUUZKIOQU1KCt8JhFKsOLjk=,iv:OH9VUXN8JTj4iMoz6/nB0EpansdFt5brv58/bN/pV7s=,tag:SfPonaO7zO+wFiM+rT5cOw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:k2/2C1Lnwd5UdV2uEVWz,iv:NaphbfrfWKh5H/lEHcBmAgGB38YVPcoNe2Jq8kr8Dfg=,tag:zbWquHmcHfhArwQrKRGlyw==,type:str]
+    #ENC[AES256_GCM,data:/sT5/Bcmwpx8K6Gb/4/yoH+zVOpTOG4HW7uIFopNAXfIVoqPRf9n9w108C04rtIRkhrwSe0f1Ao8wPlU0Yucr7ycWdcOdJkF/XamNntHPA3QmyzcjVL6,iv:0kAUCfub4g49BYbivP7rKRM068vDbGV4vZ8NagofCw0=,tag:roh3ydMRzDftm7RynRjP4A==,type:comment]
+    #ENC[AES256_GCM,data:EvF5/iTsvMT0jGB41oafAGW8uNvgMsnS75BCLoUhInkDiHl9yLWW/G0+sZ8s0AIekY0bev735mqfWSZQnrhp0FtypOay+Fkfyq2C6noOBih7k6I3bu66pgRw9Qx2j/NOfFtT68Om720c5pR6Sxq96lLrh/M3aFYs4TB2sQ==,iv:bG/AL+NfFmDB3Qc/PDHOfaste+SdJzICHTRptJm93kw=,tag:SMf6ey1sS9SRyAjFnscpug==,type:comment]
+    #ENC[AES256_GCM,data:ubATr3bg0sdaeM0+hYPjnQEh5ztR2RJZ+wRHGg6afO3vHosq9rfVMWrcnFgmYdk0hO6UkayYk9V0i7pzufuhIRw2xpTt1Lu5ITmtkEvzhSE=,iv:Fd5t9sxQmQ42YNNovZ9lC0DKuk3jbRsOjAr19gRxPt8=,tag:ARo6hmfGzLGYyW9wXgIJ9g==,type:comment]
+    #ENC[AES256_GCM,data:BcBPGgeeeVKocCRVZk5DYXlbCG1zVzwtxXXLn2aCwp13LP2ArIzLuUPYffWzxOXAIVovn98Z,iv:qs7ANP1YYDy61/AQZ0MMG3MYBdfslEZF65rFGMiDP5Q=,tag:sK6rYYyt8Obpy1RzOvboDA==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:DsDCqUj462NnmYeZ,iv:btwcZm9ZwRC8ggqkinxDwT1EkbWzBPAQNlxVybICAHE=,tag:7GFVo0N6KNaW67KWKckYWw==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:y9Phy1yT7H6DYRKHFyl+SMI=,iv:4uQRO5py1aOQeQnF3zbKkg+17GYgGDNi5SKLF7wTRuw=,tag:O/h9Hg3kCj3mSc17Tgr/MA==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:2xuc0AdVtfxe+nwC6FuoIGWs3RGnj7Rgi80E5tK9yCc=,iv:A55E4DFTBVeM6rJPdw2486RSUJ4vrMRVPDhBZjScnMQ=,tag:cDeZn9j9X5j5SFOWvuWY0A==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:p61YYKWR1zoYbMgX8WqA1+QKvwbXQAGRN7T6QOtcOZ1HxmltiysWZA==,iv:ArKuh8yfT2qVzil2nhI34YWXGxep8d8lxK8IEF+jchY=,tag:nqgMV+C6aXWpgm+LePpF7Q==,type:str]
+    #ENC[AES256_GCM,data:W+ikfXLLZUKSdLA0sFVhaIRSlNKJcIPeGJS0q6H8CfyLgS9C+bmWgyxdI0x7bvF3EV7HM1yMS68XUm0uE1NcxQ==,iv:1btWPqE9hpZyOp7cR7v6y/GwVJ1TI9GZT6JsPkeD3oE=,tag:xO3/3+DveAZsA4SL5pHcgQ==,type:comment]
+    #ENC[AES256_GCM,data:3U4S+k1y6sVCX4AfW0UxwF3TUvXqKiKKrcSbTrfxlX1NrSgbFVcG/uJuO8CY1XWfgkiDj8N68MY=,iv:kSNwUj5V8wxVjSFUYfY/n5ZZkEoNn7N0th9uPHmku6g=,tag:IX0PCVc+LpWFgvJxxkjb9Q==,type:comment]
+    #ENC[AES256_GCM,data:fTEfEE1E9DgnrldStbJqbpUsYoaWlUf8zg==,iv:/xnkPBTbtKVMn7rIpdXlw0G1RvP+PJ2AXJZzoYVciMs=,tag:QecLZj4HTKiwWnlSv3o1rw==,type:comment]
+    #ENC[AES256_GCM,data:A0NrIkngx2NBRIH6CVK9qR25W9zunJ4aJqA9y1177vMluqbaAzFpIsvWsH52lXy+tYhzUeLlgmMRsVuoP+w2w9LHp6nywJ8XGvN3aSQ=,iv:AtWBatW6y7KJnOCrdLFT29LCA57tbeFJkz4DHxHjuug=,tag:qTJDUAvW9jKbHgaQTKoy1w==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:k0zL2iF1IhVKDZd5AX+BR5bt+8mej1+E5gBrqtJs8p2cTRAosUTFFdeudDwvjwRa,iv:DrPPRmjcBXcohSRf7hDEPpPGbN85ScHZniBk8udx9B8=,tag:uhn0AfOomTs1KdHzF+/Rpg==,type:str]
+    #ENC[AES256_GCM,data:GhS6fw/RfK+cqVH0b0ZwTLirzM5G+PLtoXlfVXe0NcuZx0kAjNYnU4wkzThRj8AJg0ch/XhJkC6ylM/S8sSL992nyQMqcsc=,iv:MZLdmqinwoal03WNziyT5ATnXtM1tfpCRWx9FBktLsQ=,tag:kD602cSTL9fof5mavIreng==,type:comment]
+    #ENC[AES256_GCM,data:eGZPjsjWwkctaCMzj8K3In98OuoC/6LCYzXN9xEzEUyBHdWv/Z4xJgpOdYqf+15xzBTIxlXn,iv:dQ72bGm9AAB6SAHYYoUiAa9a1so7UI/RDAHo268iNtc=,tag:TgZ2u0ns8LEvcdwlW+gNBA==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:A5IYuVacmg==,iv:HEe7kGZXJc3RTd4lOFojDyZ7CfNR0PeudWzhN+jBBqM=,tag:A+bokh+0/JNbLeUh9mXrxw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:rsb0w9lfWT8K7ISHOKTfBJ2TPv0=,iv:8VYwuyV0qZ/+rwLMRDnckW2uUn/JGGoUDxaU1hEcjls=,tag:BoZWj75//dWs4irsIXFHRg==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:hPHHuSLL11af5aA=,iv:XtzzipTKd1s2kchHYneK3D/PvimPluhtGNttSUHo5xk=,tag:KRG6jsdQm2M2RlFkGDvQ7A==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:10mGkUzFNoGI8gOT82l2,iv:TzN6/D4IDCoBWXRTg9DDm83ff2LKKHSzhzbzSQeAQN8=,tag:daGJ7NQsho7S6q2OWFguog==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:ra48nk44A7t5r2zSC0sbJDOyz8u4YCmbOQ==,iv:s0o6Ss3HsBanrGT2bkbSiaEflu6WoSFUQilRW8hpyXo=,tag:PRK2mwJFPl4ceoyLpNoouw==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:cmlP9tTcjoJHjmk4uR07AYOBIf2GtfW5ayX9/q1jpg==,iv:FUplu9CwHxlP3dmaQOLNsIrHu6z6TJsRVXzbNypgc3Q=,tag:ud586kxA2qpr616rQNFfLA==,type:str]
+    #ENC[AES256_GCM,data:OPRiNtytubPYWD3C4ZvmrLM9zLi5iaNlT/ePh6wrT7aDpRL6KRM=,iv:JpKev+EWs0nTIjJKOup7WxqX7ZqDARKhbxmTL0ToOoU=,tag:h1j9rMPx8iUxuet4iHrnfQ==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:zRDJ+pexdkHQQDwaSlLCgwtw4yY=,iv:YUncEMFGjuHS7yEmQhKe5MMeGM3KkDP3FT60/GPxmg0=,tag:ToYcGJT23PkzNgQJbdR5dA==,type:str]
+    #ENC[AES256_GCM,data:O2otFtkRYGz3sqWlYJ8=,iv:56Pkwq5JRzrQrPYYS45a7ftm60Dwa0CZR1T/Ifi6dpU=,tag:moYntNbatuD254oQlcLQVg==,type:comment]
+    PODNET: ENC[AES256_GCM,data:lKfErPD/JnJg89rn2w==,iv:Ol3AV/4xLbtlmsfle0yQcnwyoicSYYw7dRwrWBWDYTU=,tag:YzX+UhW4dLrNMrFpUHrRCw==,type:str]
+    SVCNET: ENC[AES256_GCM,data:CNWrUci1jZ8hPjidOA==,iv:Nu40jmNRYyHJEXl1QCdJ7n96GQT+w9TB/DyJ1Pa9Ddo=,tag:62pECS8jktxMvSTntP+RyQ==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:CPgLHw==,iv:nPVZdOAUA9BANKJM+wSlCCIGspKJesGZbQZhW8fvHoQ=,tag:67LLkCt5vh8oagA4T+1kYA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXMWx5ZEZ4aXZkZ2w2Mm1x
-            Tm0wNGdrRWpxdFplUnVabkNEc0tvNWlMYUhJCmxQcHIyZFB6L0hDTWZWRlNqUVRR
-            NnFYMkVSZEY1Ri9oN1MvbFA5UmJ4c28KLS0tIHhmYkdMb0xRYm5wU1pQWWRVT20z
-            cmc2UmhocW0xSTMwWlhKcTI4UXpnOTAKQA0IR4de0bZhTqVVw6SHZlobRWaCsOho
-            gocSWG6ATwF/zpbAHW6Q9hESWXmAPh80582pqYJNcOufhL2OJezhzw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBvd2dnLzR2ZFRsak9MUEpu
+            NDN2UFZ3TXJ4K0JWSk4rNWliUVdFRWlMaUg0CllYNHVPeWhnbjhiamR0TjM2aVZp
+            cGNZYXM1NS9TSkRRb0dUeHRZN09NQkEKLS0tIHBFSnpweEZwZTNWWEFNUXB2eFlw
+            SGVOYjFqeGxaMXNUdVhOQUEvLytudm8KeU2W8tqX8YRcG2jTNhoYKafOmz/buzQN
+            rij6GFoujkbkPGAwqCEou3Te3k23WEa3g5p9smaL3gieYUqD2EZl7A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-18T22:16:44Z"
-    mac: ENC[AES256_GCM,data:PGfn4NYj4+1PSrWYVHz2zYK1CufbxGJl1K+NEWx7gCr59HrBSAPEMVXNW6Hh1jrF4drGuYgVU05Om9qiREayB29A0fBC5vRz4Rl/b+HfEVcCz3C/FDjQSw8Tdnq/F4YCKMYHfJ85Nj91jv6pG8R0hD8ZBS0M5Ot270a415Uc63Y=,iv:tIFaUbVxnyqwM04Q4Xj2wPEqeoPIoXQyV1Iqgntt2uc=,tag:zquTksLqjoZtLz6Ua1TrwQ==,type:str]
+    lastmodified: "2025-01-18T22:46:41Z"
+    mac: ENC[AES256_GCM,data:h8xj4HnyMj7PA6tQ+Y+bxsyuusOGlWWZwbmuPQDwOfPUtpDv9RCZJGR8MiQhsSDfDi/dWnDCPk7Q2IaXa3MbEgb8VYBOqA5eUiHIfOpWdJ7qbgyrUDQfhv6CG+waXUGGvWgQcZMdYzMlpGFoopf2CeVKjkEWiGjb8Y1vF3FJTxA=,iv:xGrXNfTAc4ghKiXEvVBEg7YPbbMCnQJm/nhaWyUpgSE=,tag:H0jCAj9VtlmH5zSeo9F+/w==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
